# ipython_blocking

./: CHANGELOG.md  LICENSE  README.md  demo_notebook.ipynb  ipython_blocking.py  postBuild  pyproject.toml  setup.py
demo_notebooks/: 1. basic %blockrun.ipynb  2. %blockrun and validation.ipynb  3. %block on non-button widgets.ipynb  4. %blockrun is fine to use with asyncio.ipynb  5. Visualizing shark data without ipython_blocking.ipynb  6. Visualizing shark data with ipython_blocking.ipynb  Untitled.ipynb
ipython_blocking/: __init__.py  ipython_blocking.py  ipython_magic.py
src/ipython_blocking/: __init__.py  ipython_blocking.py
